# Nevo-Demo

./: .gitallowed  .gitignore  .gitignore_VERIFICATION.md  .gitmodules  COMPLETE_SETUP_GUIDE.md  Framwork.md  KEY_DIFFERENCE_BETWEEN_TWO_Version  LOCAL_TESTING_GUIDE.md  PYTHON_VERSION_SETUP.md  README.md  Steps-to-copy-any-project file.md  VIRTUAL_ENV_SETUP.md
audi-nevo-frontend-main/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
nevo-audi-pitch-backend-main/: Pipfile  README.md  requirements.txt
nevo-backend-framework-main/: .gitignore  Pipfile  README.md  pyproject.toml
nevo-backend-framework-main/analysis/: log analysis.ipynb  log_analysis.py  speech_analysis.ipynb
nevo-backend-framework-main/analysis/data_collector_benchmark/: collector_test DAVID.ipynb  collector_test.json  collector_test.py  collector_test_2 copy.ipynb  collector_test_2.ipynb  collector_test_2.py  create_collectors.py  data_collector.py  test_visualisation.ipynb
nevo-backend-framework-main/buildingblocks/: main_example.py
nevo-backend-framework-main/buildingblocks/salesforce_connector/: salesforce_connector_deprecated.py  salesforce_integration_test.py
nevo-backend-framework-main/buildingblocks/vectordb/: vectordb.py
nevo-backend-framework-main/config/: log-testclient.ini  master_config.json
nevo-backend-framework-main/src/nevo_framework/api/: api.py  api_experimetnal.py  api_helpers.py  server_messages.py  sessions.py
nevo-backend-framework-main/src/nevo_framework/config/: audio_config.py  master_config.py  prompts.json
nevo-backend-framework-main/src/nevo_framework/helpers/: convert_specs.py  file_hashing.py  file_tools.py  instantiation.py  logging_helpers.py
nevo-backend-framework-main/src/nevo_framework/llm/: agent_orchestrator.py  agents.py  dialog_manager.py  dialog_manager_experimental.py  llm_tools.py  openai_realtime.py  stream_watching.py
nevo-backend-framework-main/src/nevo_framework/llm/simple_assistant/: assistant_orchestrator.py
nevo-backend-framework-main/src/nevo_framework/playground/: datamodel.py  prompt_repo.py
nevo-backend-framework-main/src/nevo_framework/testing/: simple_agents.py  test_helpers.py  testing_bot.py  testing_client.py
(+663 files in other folders)
